<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Label The Diagram</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="voltmeter">Voltmeter</string>
    <string name="ammeter">Ammeter</string>
    <string name="battery">Battery</string>
    <string name="load">Load</string>
    <string name="scorestring">Score: 0</string>
    <string name="title_activity_stat">StatActivity</string>

</resources>
