<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#4DFF4D" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/scorestring"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="234dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:src="@drawable/diagram1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:weightSum="2" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                     android:layout_marginRight="2dp"
                    android:background="#CCFF33"
                    android:id="@+id/vId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/voltmeter"
                    android:textSize="20sp" />

                <TextView
                     android:layout_marginLeft="2dp"
                    android:background="#CCFF33"
                    android:id="@+id/aId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ammeter"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:layout_marginRight="2dp"
                    android:background="#CCFF33"
                    android:id="@+id/bId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/battery"
                    android:textSize="20sp" />

                <TextView
                     android:layout_marginLeft="2dp"
                    android:background="#CCFF33"
                    android:id="@+id/lId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/load"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
        <Button 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="Restart"
            />
    </LinearLayout>

</ScrollView>